TFP-6071: endre SjekkManglendeFødselOppdaterer til å håndtere ny struktur for AP dto